--- a/public/profile.html
+++ b/public/profile.html
@@ -9,8 +9,12 @@
       * {
         font-family: sans-serif;
       }
+      img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+      }
     </style>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
